--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,6 @@ colorama==0.4.6
 comm==0.2.3
 contourpy==1.3.3
 cycler==0.12.1
-debugpy==1.8.16
 decorator==5.2.1
 distro==1.9.0
 et_xmlfile==2.0.0
@@ -26,16 +25,12 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
-ipykernel==6.30.1
-ipython==9.5.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 Jinja2==3.1.6
 jiter==0.10.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
-jupyter_client==8.6.3
-jupyter_core==5.8.1
 kiwisolver==1.4.9
 koreanize-matplotlib==0.1.1
 MarkupSafe==3.0.2
@@ -68,7 +63,6 @@ PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
-pywin32==311
 pyzmq==27.0.2
 referencing==0.36.2
 requests==2.32.5
@@ -99,3 +93,12 @@ wcwidth==0.2.13
 websocket-client==1.8.0
 wheel==0.45.1
 wsproto==1.2.0
+streamlit>=1.33,<2
+pandas==2.3.2
+numpy==2.3.2
+matplotlib==3.10.6
+seaborn==0.13.2
+altair==5.5.0
+pyarrow==21.0.0
+openpyxl==3.1.5
+koreanize-matplotlib==0.1.1
